# pure-python-mlp-from-scratch

./: .gitignore  AGENTS.md  README.md  mlp_from_scratch.py  pyproject.toml
data/: README.md  bike_rentals.csv  bike_rentals_mini.csv  week-05-moons.csv
notebooks/: 01_first_bike_rental_prediction.ipynb  02_chain_rule_by_hand.ipynb  03_tiny_scalar_backward.ipynb  04_gradient_descent.ipynb  05_one_neuron_several_inputs.ipynb  06_relu.ipynb  07_forward_pass_final_model.ipynb  07_mlp_training_by_hand.ipynb  08_bike_rental_model.ipynb  08_mlp_training_by_hand.ipynb  10_bike_rental_demand_regression.ipynb
scripts/: prepare_bike_rentals_mini.py
src/tiny_mlp_course/: __init__.py  loss.py  tensor.py  value.py
tests/: test_gradients.py  test_loss.py  test_mlp_from_scratch.py  test_tensor.py  test_value.py
