[project]
name = "pure-python-mlp-from-scratch"
version = "0.1.0"
description = "A Week 05 one-hidden-layer MLP implemented with only the Python standard library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
